# DS-CATU

./: .gitignore  DR1022-80447_Determination_ORder.txt  README.md  pyproject.toml  requirements.txt  setup.sh  setup_colab.sh
map/: RTB-Disputes-Map.html
notebooks/: analysis.ipynb  colab_interface.ipynb
reference/: keywords.txt
src/: analysis.ipynb  colab_interface.ipynb  combine_csv.py  combine_data.py  docling_ocr.py  download_determination_orders.py  download_determination_orders_old.py  geocode_addresses.py  gliner_test.py  map_disputes.py  merge_summary_report.py  pdf2text.py  read_determination_order.py  read_determination_orders.py  read_determination_orders_regex.py  test_playwright.py
src/utilities/: combine_csv.py  count_text_pdfs.py  hash_columns.py  split_csv.py  validate_addresses.py
