[project]
name = "ds-catu"
version = "0.1.0"
description = "Tools for downloading and processing RTB determination orders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pdf2image",
    "pytesseract",
    "playwright",
    "requests",
    "python-dotenv",
    "tree-sitter>=0.25.2",
    "docling>=2.69.1",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
