[project]
name = "ds-catu"
version = "0.1.0"
description = "Tools for downloading and processing RTB determination orders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "playwright",
    "requests",
    "python-dotenv",
    "docling",
    "easyocr>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
